--- a/trunk/SoftwareQuotes/res/layout/show_quote.xml
+++ b/trunk/SoftwareQuotes/res/layout/show_quote.xml
@@ -2,29 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="match_parent"
 	android:layout_height="match_parent">
-
 	<include layout="@layout/title" />
 	<LinearLayout android:orientation="vertical"
 		android:padding="30dp" android:layout_width="match_parent"
 		android:gravity="center" android:layout_height="match_parent">
-		<TextView android:id="@+id/body" android:layout_width="match_parent"
-			android:layout_weight="1" android:scrollbars="vertical"
-			android:scrollbarStyle="insideOverlay" android:textSize="@dimen/show_quote_body_text_size"
-			android:layout_height="wrap_content" />
+		<TextView android:id="@+id/body" style="@style/QuoteBody" />
 		<LinearLayout android:orientation="horizontal"
-			android:layout_marginTop="10dp"
-			android:gravity="center_vertical" android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-			<ImageButton android:id="@+id/share_sms"
-				android:background="@drawable/button"
-				android:src="@android:drawable/sym_action_email"
-				android:layout_width="wrap_content" android:onClick="onShareClick"
-				android:layout_height="wrap_content" />
-			<TextView android:id="@+id/author" android:layout_width="wrap_content"
-				android:layout_weight="1"
-				android:textSize="@dimen/show_quote_author_text_size"
-				android:textStyle="bold" android:gravity="right"
-				android:layout_height="wrap_content" />
+			android:layout_marginTop="10dp" android:gravity="center_vertical"
+			android:layout_width="match_parent" android:layout_height="wrap_content">
+			<ImageButton android:id="@+id/share_sms" style="@style/QuotesButton"
+				android:src="@android:drawable/sym_action_email" android:onClick="onShareClick" />
+			<TextView android:id="@+id/author" style="@style/QuoteAuthor" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
