--- a/SoftwareQuotes/res/layout/separator.xml
+++ b/SoftwareQuotes/res/layout/separator.xml
@@ -1,12 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/text"
-	android:singleLine="true"
-	android:padding="8dp"
-	android:text="FRANCO"
-	android:textSize="@dimen/list_of_quotes_text_size"
-	android:textColor="@android:color/black"
-	android:background="@android:color/darker_gray"
-	android:gravity="right"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content" />
+	android:id="@+id/text" style="@style/Separator"/>
