--- a/SoftwareQuotes/res/layout/title.xml
+++ b/SoftwareQuotes/res/layout/title.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@drawable/title"
-           android:background="@drawable/title_bg"
-           android:layout_width="match_parent"
-           android:padding="8dp"
-           android:scaleType="fitStart"
-           android:layout_height="wrap_content"/>
+           style="@style/Title"/>
