--- a/SoftwareQuotes/res/values/styles.xml
+++ b/SoftwareQuotes/res/values/styles.xml
@@ -17,7 +17,7 @@
 	</style>
 
 	<style name="Title">
-		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:scaleType">fitStart</item>
 		<item name="android:padding">@dimen/title_bg_padding</item>
@@ -25,7 +25,7 @@
 	</style>
 
 	<style name="QuoteBody">
-		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_weight">1</item>
 		<item name="android:scrollbars">vertical</item>
@@ -34,7 +34,7 @@
 	</style>
 
 	<style name="QuoteAuthor">
-		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_weight">1</item>
 		<item name="android:textSize">@dimen/show_quote_author_text_size</item>
@@ -43,13 +43,13 @@
 	</style>
 
 	<style name="QuotesList">
-		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:fastScrollEnabled">true</item>
 	</style>
 	
 	<style name="QuotesListItem">
-		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:padding">8dp</item>
 		<item name="android:singleLine">true</item>
