--- a/trunk/CelsiusFahrenheitConverter/res/layout/main.xml
+++ b/trunk/CelsiusFahrenheitConverter/res/layout/main.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-	<TextView android:layout_width="fill_parent"
-		android:textSize="20dp"
+	<TextView android:layout_width="fill_parent" android:textSize="20dp"
 		android:layout_margin="10dp" android:layout_height="wrap_content"
 		android:text="@string/prompt" />
 	<EditText android:id="@+id/celsius" android:layout_width="fill_parent"
-		android:layout_margin="10dp" android:hint="Celsius" android:inputType="numberSigned"
+		android:layout_margin="10dp" android:hint="Celsius" android:inputType="numberDecimal"
 		android:layout_height="wrap_content" />
 	<EditText android:id="@+id/fahrenheit" android:layout_width="fill_parent"
-		android:layout_margin="10dp" android:hint="Fahreneit"
-		android:layout_height="wrap_content" />
+		android:inputType="numberDecimal" android:layout_margin="10dp"
+		android:hint="Fahreneit" android:layout_height="wrap_content" />
 </LinearLayout>
